creusot/tests/should_fail/prusti/deref/make_ref.stderr
error[creusot]: std::boxed::Box<(u32, u32)>@'old cannot be moved to 'curr since it isn't copy
  --> make_ref.rs:14:20
   |
14 | #[ensures({let x = x.mk_ref(); x.0 == result})]
   |                    ^

error: aborting due to previous error

